# ocrx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ocrx/: __init__.py  __main__.py  cli.py  config.py  engine.py  exceptions.py  formatter.py  models.py  processor.py  utils.py
tests/: test_formatter.py  test_models.py  test_processor.py
