[project]
name = "ocrx"
version = "0.1.0"
description = "Pythonic OCR eXtended — structured text recognition powered by PaddleOCR"

requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "muqiu" },
]
keywords = ["ocr", "paddleocr", "text-detection", "text-recognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "paddlepaddle>=2.6,<3",
    "paddleocr>=2.9,<3",
    "click>=8,<9",
]

[project.scripts]
ocrx = "ocrx.cli:cli"

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocrx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
